--- a/index.html
+++ b/index.html
@@ -24,3 +24,8 @@
     </footer>
 </body>
 </html>
+<a href="produkter.html">
+  <button style="padding: 10px 20px; background-color: #007BFF; color: white; border: none; border-radius: 5px; margin-top: 20px;">
+    Se Produktene Våre
+  </button>
+</a>
