--- a/index.html
+++ b/index.html
@@ -29,3 +29,7 @@
     </footer>
 </body>
 </html>
+<!-- رأس الصفحة مع الشعار داخل مستطيل -->
+<div style="background-color: #003300; padding: 20px 0; text-align: center;">
+  <img src="logo.png" alt="Godt Valg logo" style="height: 80px;">
+</div>
