--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
+<!DOCTYPE html>
+<html lang="no">
+<head>
+  <meta charset="UTF-8">
+  <title>Godt Valg</title>
+</head>
+<body>
 
+  <!-- شعار بالمستطيل -->
+  <div style="background-color: #003300; padding: 20px 0; text-align: center;">
+    <img src="logo.png" alt="Godt Valg logo" style="height: 80px;">
+  </div>
+
+  <!-- باقي الموقع -->
+  <div style="padding: 20px;">
+    <h1>Velkommen til Godt Valg</h1>
+    <p>Vi tilbyr kvalitetsprodukter og god kaffe!</p>
+  </div>
+
+</body>
+</html>
 <!DOCTYPE html>
 <html lang="no">
 <head>
