--- a/index.html
+++ b/index.html
@@ -2,50 +2,44 @@
 <html lang="no">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Godt Valg</title>
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      color: white;
+      background-color: #013220;
+      background-image: url('data:image/svg+xml;utf8,\
+      <svg xmlns="http://www.w3.org/2000/svg" width="120" height="120" viewBox="0 0 120 120">\
+        <defs>\
+          <pattern id="gvPattern" x="0" y="0" width="60" height="60" patternUnits="userSpaceOnUse">\
+            <text x="0" y="45" font-family="serif" font-size="40" fill="gold" font-weight="bold">GV</text>\
+            <circle cx="55" cy="30" r="4" fill="gold"/>\
+          </pattern>\
+        </defs>\
+        <rect width="120" height="120" fill="url(#gvPattern)"/>\
+      </svg>');
+      background-repeat: repeat;
+    }
+
+    header {
+      text-align: center;
+      padding: 100px 20px;
+    }
+
+    h1 {
+      font-size: 3em;
+      color: gold;
+      text-shadow: 2px 2px 5px black;
+    }
+  </style>
 </head>
 <body>
-
-  <!-- شعار بالمستطيل -->
-  <div style="background-color: #003300; padding: 20px 0; text-align: center;">
-    <img src="logo.png" alt="Godt Valg logo" style="height: 80px;">
-  </div>
-
-  <!-- باقي الموقع -->
-  <div style="padding: 20px;">
+  <header>
     <h1>Velkommen til Godt Valg</h1>
-    <p>Vi tilbyr kvalitetsprodukter og god kaffe!</p>
-  </div>
-
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="no">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Godt Valg</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <a href="produkter.html">
-  <button style="padding: 10px 20px; background-color: #007BFF; color: white; border: none; border-radius: 5px; margin-top: 20px;">
-    Se Produktene Våre
-  </button>
-</a>
-    <header>
-        <h1>Godt Valg</h1>
-        <p>Fordi du fortjener det beste</p>
-    </header>
-    <main>
-        <section class="intro">
-            <h2>Velkommen!</h2>
-            <p>Vi tilbyr pålitelige tjenester – enkelt, raskt og med et smil.</p>
-            <a href="mailto:kontakt@godtvalg.no" class="cta">Kontakt oss</a>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Godt Valg. Alle rettigheter reservert.</p>
-    </footer>
+  </header>
 </body>
 </html>
